gradio app update

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -1163,6 +1163,166 @@
    "id": "973ce233",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Documents -> Load -> Split Chunks -> Embeddings -> Vector Store -> Retriever "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cfade95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c53936f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv(override=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "77216cf7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "hf_api_key = os.getenv(\"HF_API_KEY\")\n",
+    "if hf_api_key is not None:\n",
+    "    os.environ[\"HF_API_KEY\"] = hf_api_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3125ec83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\MAIN_PROJECTS\\Multi_Model_Agentic_RAG\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from huggingface_hub import login\n",
+    "login(token=hf_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "345ba87a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from langchain_huggingface import HuggingFaceEndpoint\n",
+    "# import requests\n",
+    "# from langchain.tools import tool\n",
+    "\n",
+    "# API_URL = \"https://api-inference.huggingface.co/models/runwayml/stable-diffusion-v1-5\"\n",
+    "# headers = {\"Authorization\": f\"Bearer {hf_api_key}\"}\n",
+    "\n",
+    "# @tool\n",
+    "# def generate_image(prompt: str) -> str:\n",
+    "#     \"\"\"Generate an image from a text prompt using Hugging Face API.\"\"\"\n",
+    "#     response = requests.post(API_URL, headers=headers, json={\"inputs\": prompt})\n",
+    "#     image_path = \"output.png\"\n",
+    "#     with open(image_path, \"wb\") as f:\n",
+    "#         f.write(response.content)\n",
+    "#     return f\"Image saved to {image_path}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1fa5a6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prompt = \"A frog holding a board saying hello\"\n",
+    "# generate_image(prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "41d25d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ANAND REDDY\\AppData\\Local\\Temp\\ipykernel_21108\\1573314702.py:31: LangChainDeprecationWarning: The method `BaseTool.__call__` was deprecated in langchain-core 0.1.47 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  image = generate_image(\"A Frog jumping over a man\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import json\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "from langchain.tools import tool\n",
+    "\n",
+    "@tool\n",
+    "def generate_image(prompt, model_id=\"black-forest-labs/FLUX.1-dev\"):\n",
+    "    \"\"\" Use this tool to generate images \"\"\"\n",
+    "    API_URL = f\"https://api-inference.huggingface.co/models/{model_id}\"\n",
+    "    headers = {\"Authorization\": f\"Bearer {hf_api_key}\"}\n",
+    "    \n",
+    "    payload = {\n",
+    "        \"inputs\": prompt,\n",
+    "        \"parameters\": {\n",
+    "            \"num_inference_steps\": 50,\n",
+    "            \"guidance_scale\": 7.5\n",
+    "        }\n",
+    "    }\n",
+    "    \n",
+    "    response = requests.post(API_URL, headers=headers, json=payload)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        image = Image.open(io.BytesIO(response.content))\n",
+    "        return image\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}, {response.text}\")\n",
+    "        return None\n",
+    "\n",
+    "# Usage\n",
+    "image = generate_image(\"A Frog jumping over a man\")\n",
+    "if image:\n",
+    "    image.save(\"frog_image.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "217d1c5b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -1182,7 +1342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
